--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -45,6 +45,9 @@
   margin-top: 80px;
   font-family: 'Open Sans';
 }
+.benefits {
+  height: 250px;
+}
 
 .benefits h1 {
   font-weight: 600;
@@ -76,16 +79,19 @@
   background-image: url(../images/testimonial_bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 400px;
+  height: 200px;
   color: white;
   font-style: italic;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 100;
   text-align: center;
   padding-top: 100px;
   width: 100%;
 }
 
+#author {
+  font-weight: 300;
+}
 #button-footer {
   border-radius: 5px;
   border: none;
@@ -94,10 +100,10 @@
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 900;
   background-color: #033048;
-  margin-left: 500px;
+  margin-left: 400px;
   margin-top: 30px;
 }
 .second-button {
@@ -108,10 +114,24 @@
 
 footer {
   background-color: #121212;
-  height: 500px;
+  height: 300px;
   color: white;
   text-align: center;
 }
-footer h4 {
+.social-icon h4 {
   margin-top: 0;
+  padding-top: 40px;
+  font-size: 24px;
+  font-weight: 900;
+}
+
+.social-icon a {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.social-icon p {
+  font-size: 9px;
+  font-weight: 600;
+  padding-top: 10px;
 }
